# CADSimplifyApp

./: .gitignore  CHANGELOG  LICENSE  README.md  README.rst  build_mesh_wrapper.bat  build_mesh_wrapper.sh  pyproject.toml
.github/workflows/: briefcase.yml
src/simplifyapp/: __main__.py  app.py
src/simplifyapp/resources/: CMakeLists.txt  mesh_wrapper.cpp
src/simplifyapp/resources/blender/: workspace.blend
src/simplifyapp/scripts/: __init__.py  blend_proc.py  blend_utils.py  cad_simplifer.py  config.py  converter.py  mesh_wrap.py  stp_to_stl.py
